# cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-publish-binaries.yml  checks.yml
1/: Exofile.yml
package-publisher/: Cargo.toml  Dockerfile
package-publisher/src/: git.rs  main.rs
package-publisher/templates/: Dockerfile.deb.mustache  homebrew.mustache
platforms_templates/laravel-artisan/: Exofile.yml
platforms_templates/proxy/: Exofile.yml.handlebars
platforms_templates/rails/: Exofile.yml
platforms_templates/svelte/: Exofile.yml
platforms_templates/synapse/: docker-compose.yaml  exogress.env  synapse.env
platforms_templates/synapse/synapse-admin/: Dockerfile  Exofile.yml
platforms_templates/synapse/synapse-server/: Dockerfile  Exofile.yml
src/: init.rs  invalidate.rs  main.rs
src/init/: laravel_artisan.rs  matrix_synapse.rs  mod.rs  proxy.rs  rails.rs  svelte.rs
static/: static.html  try.html
wix/: main.wxs
