[package]
name = "exogress"
description = "Exogress command-line client"
version = "0.0.1-alpha.50"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"
license = "Apache 2.0"

[dependencies]
clap = "2.33.3"
url = "2.1.1"
tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "process"] }
futures = "0.3.5"
trust-dns-resolver = "0.19.5"
shadow-clone = "1.2.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
stop-handle = "0.1"
anyhow = "1.0.32"
serde_yaml = "0.8.12"
hashbrown = "0.9.0"
shellexpand = "2.0.0"

#exogress-client-core = { version = "0.1", path = "../server/deps/exogress/crates/client-core" }
#exogress-tunnel = { version = "0.1", path = "../server/deps/exogress/crates/tunnel" }
#exogress-config-core = { version = "0.1", path = "../server/deps/exogress/crates/config-core" }
#exogress-entities = { path = "../server/deps/exogress/crates/entities", version = "0.1" }
#exogress-common-utils = { path = "../server/deps/exogress/crates/common-utils", version = "0.1" }

exogress-client-core = { version = "0.1", path = "deps/exogress/crates/client-core" }
exogress-tunnel = { version = "0.1", path = "deps/exogress/crates/tunnel" }
exogress-config-core = { version = "0.1", path = "deps/exogress/crates/config-core" }
exogress-entities = { path = "deps/exogress/crates/entities", version = "0.1" }
exogress-common-utils = { path = "deps/exogress/crates/common-utils", version = "0.1" }

[package.metadata.deb]
depends = "$auto, ca-certificates"
section = "net"
priority = "optional"

[package.metadata.rpm]
package = "exogress"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
exogress = { path = "/usr/bin/exogress" }
