[package]
name = "exogress"
description = "Exogress command-line client"
version = "0.1.0-pre.3"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"
license = "Apache 2.0"

[dependencies]
clap = "2.33.3"
url = "2.1.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
futures = "0.3.5"
trust-dns-resolver = "0.20.0"
shadow-clone = "1.2.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
stop-handle = "0.1"
anyhow = "1.0.32"
serde_yaml = "0.8.12"
serde_json = "1.0.64"
hashbrown = "0.9.0"
shellexpand = "2.0.0"
maplit = "1.0.2"
http = "0.2"
include_dir = "0.6.0"
mime = "0.3.16"
regex = "1.3.7"
handlebars = "3.5.0"

exogress-common = { git = "https://github.com/exogress/exogress.git", branch = "master", version = "0.0.1-beta", features = ["client-core", "tunnel", "config-core", "entities", "common-utils"], default-features = false }

[package.metadata.deb]
depends = "$auto, ca-certificates"
section = "net"
priority = "optional"

[package.metadata.rpm]
package = "exogress"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
exogress = { path = "/usr/bin/exogress" }
