[package]
name = "exogress-package-publisher"
version = "0.1.0"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"

[dependencies]
hex = "0.4.0"
reqwest = "0.10"
sha2 = "0.8.1"
tokio = { version = "0.2", features = ["net", "macros", "process", "time"] }
clap = "2.33.3"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
mustache = "0.9.0"
include_dir = "0.6.0"
git2 = "0.13.10"
tempfile = "3.1.0"
url = "2.1.1"
anyhow = "1.0.32"
semver = "0.10.0"
flate2 = "1.0.17"
rustyline = "6.2.0"
toml = "0.5.6"
cloud-storage = "0.6.2"

